Add class to tags

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
   <header>
-    <div>
-      <h1>Solar System</h1>
-      <nav>
-        <ul>
-          <li><a href="#">Planets</a></li>
-          <li><a href="#">Moons</a></li>
-          <li><a href="#">Exploration</a></li>
+    <div class="grid">
+      <h1 class="unit xs-1 s-1 m-1-2 l-1-2 island-1-4 push-0 text-center pad-t-1-2">Solar System</h1>
+      <nav class="unit xs-1 s-1 m-1-2 l-1-2 island-1-8">
+        <ul class="push-0">
+          <li><a class="island-1-2 giga" href="#">Planets</a></li>
+          <li><a class="island-1-2 giga" href="#">Moons</a></li>
+          <li><a class="island-1-2 giga" href="#">Exploration</a></li>
         </ul>
       </nav>
     </div>
