--- a/index.html
+++ b/index.html
@@ -9,21 +9,17 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <header>
-    <div class="grid">
-      <h1 class="unit xs-1 s-1 m-1-2 l-1-2 island-1-4 push-0 text-center pad-t-1-2">Solar System</h1>
-      <nav class="unit xs-1 s-1 m-1-2 l-1-2 island-1-8">
-        <ul class="push-0">
-          <li><a class="island-1-2 giga" href="#">Planets</a></li>
-          <li><a class="island-1-2 giga" href="#">Moons</a></li>
-          <li><a class="island-1-2 giga" href="#">Exploration</a></li>
-        </ul>
-      </nav>
+  <header class="grid grid-middle pad-t-1-4">
+    <div class="unit xs-1 s-1 m-1-3 l-1-2 island-1-4 pad-t-1-2">
+      <h1 class=" logo push-0 text-center peta">Solar System</h1>
     </div>
-
+    <nav class="unit nav xs-1 s-1 m-2-3 l-1-2 island-1-8 giga">
+      <ul class="push-0">
+        <li><a class="island-1-2" href="#">Planets</a></li>
+        <li><a class="island-1-2" href="#">Moons</a></li>
+        <li><a class="island-1-2" href="#">Exploration</a></li>
+      </ul>
+    </nav>
   </header>
-
-
-
 </body>
 </html>
